--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/favicon2.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pokemon go</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=League+Spartan:wght@400;500;600;700&family=Nunito:wght@300;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
